cập nhật thành phần

--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -23,10 +23,11 @@
   .sh-select-selection {
     align-items: center;
     border: 1px solid #ccc;
+    border-radius: 2px;
     cursor: pointer;
     display: flex;
+    height: 36px;
     justify-content: space-between;
-    padding: 8px;
     position: relative;
 
     input {
@@ -184,10 +185,29 @@
 
   .dropdown-icon {
     height: 18px;
+    margin-right: 8px;
     position: relative;
-    right: -19px;
-    top: -2px;
     width: 18px;
+
+    &::before,
+    &::after {
+      border-top: 1px solid #ccc;
+      content: "";
+      position: absolute;
+      top: 50%;
+      transition: .3s;
+      width: 58%;
+    }
+
+    &::before {
+      left: 0;
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      right: 0;
+      transform: rotate(-45deg);
+    }
   }
 
   .sh-select-reset {
@@ -222,6 +242,7 @@
 
   .results-zone {
     overflow: hidden;
+    padding: 1px 12px 2px;
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 100%;
@@ -250,4 +271,14 @@
 
 .sh-select-dropdown .text.clam-3 {
   -webkit-line-clamp: 3;
+}
+
+.sh-select.open .dropdown-icon {
+  &::before {
+    transform: rotate(135deg);
+  }
+
+  &::after {
+    transform: rotate(-135deg);
+  }
 }
