--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -3,6 +3,7 @@
 input {
   border: none;
   border-radius: 2px;
+  height: 34px;
   padding: 1px 12px 2px;
 }
 
@@ -12,6 +13,7 @@ input {
   border: 1px solid #e0e0e0;
   border-radius: 2px;
   display: flex;
+  height: 36px;
   overflow: hidden;
   transition: .3s;
 
