--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -157,18 +157,29 @@
   }
 
   .select-filter {
-    background-color: #efefef;
+    background-color: #fff;
     padding: 10px;
     position: sticky;
     top: 0;
     z-index: 99;
+  }
+
+  .filter-form {
+    align-items: center;
+    background-color: #f2f2f2;
+    border-radius: 6px;
+    display: flex;
+    gap: 6px;
+    height: 32px;
+    padding: 0 10px;
 
     input {
-      border-color: #c6c6c6;
-      border-radius: 5px;
+      border: none;
+      flex: 1 0 0;
       font-size: 14px;
       font-weight: 400;
-      height: 34px;
+      height: 100%;
+      padding: 0;
     }
   }
 
