--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -155,6 +155,11 @@ input {
     transition: 0.3s;
   }
 
+  input:disabled~.remark {
+    filter: brightness(0.5);
+    opacity: 0.5;
+  }
+
   .text {
     font-weight: 400;
   }
