--- a/projects/sahu/styles/_sh.input.scss
+++ b/projects/sahu/styles/_sh.input.scss
@@ -156,8 +156,7 @@ input {
   }
 
   input:disabled~.remark {
-    filter: brightness(0.5);
-    opacity: 0.5;
+    background-color: #d4d4d4;
   }
 
   .text {
