--- a/projects/sahu/styles/_sh.select.scss
+++ b/projects/sahu/styles/_sh.select.scss
@@ -174,6 +174,7 @@
     padding: 0 10px;
 
     input {
+      background-color: transparent;
       border: none;
       flex: 1 0 0;
       font-size: 14px;
