--- a/projects/sahu/styles/sahu.scss
+++ b/projects/sahu/styles/sahu.scss
@@ -1,4 +1,4 @@
-@import './sh.input';
-@import './sh.select';
-@import './sh.slideshow';
-@import './sh.message_box';
+@use './input';
+@use './select';
+@use './slideshow';
+@use './message_box';
