cập nhật thành phần

--- a/projects/sahu/src/lib/sh-button/sh-button.component.html
+++ b/projects/sahu/src/lib/sh-button/sh-button.component.html
@@ -1,14 +1,8 @@
-<a
-  *ngIf="shRouterLink"
-  [routerLink]="shRouterLink"
-  [ngClass]="shClass">
-  {{shTitle}}
-</a>
 <button
-  *ngIf="!shRouterLink"
+  class="btn"
   [ngClass]="shClass"
   [attr.type]="shType"
   [disabled]="disabled"
   (click)="handleClick($event)">
-  {{shTitle}}
+  {{shLabel}}
 </button>
