--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -1,19 +1,24 @@
 /*~.~.~.~.~.~.~.~.~.~.~.~.~.~.~. text ~.~.~.~.~.~.~.~.~.~.~.~.~.~.~.*/
 
 input {
+  background-color: transparent;
   border: none;
   border-radius: 2px;
-  height: 34px;
+  height: 100%;
   padding: 1px 12px 2px;
+  width: 100%;
+}
+
+input:focus-visible {
+  outline: none;
 }
 
 .sh-input-text {
   align-items: center;
-  background-color: #fff;
-  border: 1px solid #e0e0e0;
+  background-color: #f5f5f5;
+  border: 1px solid #d9d9d9;
   border-radius: 2px;
   display: flex;
-  height: 36px;
   overflow: hidden;
   transition: .3s;
 
@@ -21,6 +26,7 @@ input {
     align-items: center;
     color: #666;
     display: flex;
+    flex: 10px 0 0;
     height: 100%;
     justify-content: center;
     padding: 5px 0 5px 10px;
@@ -57,52 +63,20 @@ input {
   }
 }
 
-.input-xs {
-  height: 28px;
-
-  input {
-    font-size: 13px;
-    height: 26px;
-  }
-
-  .icon {
-    font-size: 13px;
-  }
-}
-
 .input-sm {
-  height: 32px;
-
-  input {
-    font-size: 14px;
-    height: 30px;
-  }
-
-  .icon {
-    font-size: 14px;
-  }
+  height: 24px;
 }
 
 .input-md {
-  height: 36px;
-
-  input {
-    font-size: 15px;
-    height: 34px;
-  }
-
-  .icon {
-    font-size: 15px;
-  }
+  height: 32px;
 }
 
 .input-lg {
   height: 40px;
 
   input {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 500;
-    height: 38px;
   }
 
   .icon {
@@ -116,7 +90,6 @@ input {
   input {
     font-size: 16px;
     font-weight: 500;
-    height: 46px;
   }
 
   .icon {
