--- a/projects/sahu/src/lib/sh-modal/sh-modal.component.html
+++ b/projects/sahu/src/lib/sh-modal/sh-modal.component.html
@@ -15,7 +15,7 @@
 
     <ng-container *ngIf="shFoot">
       <div class="md-foot" [ngClass]="shFootClass">
-        <sh-button (click)="handleCancel($event)" [shClass]="'btn-cancel'">Đóng</sh-button>
+        <sh-button (click)="handleCancel($event)" [shClass]="'btn-default'">Đóng</sh-button>
         <sh-button (click)="handleOk($event)" [shClass]="'btn-primary'">Ok</sh-button>
       </div>
     </ng-container>
