--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -1,7 +1,9 @@
 @use './variables';
 @use './fonts';
 
+@use './icon';
 @use './input';
+@use './button';
 @use './select';
 @use './slideshow';
 @use './message_box';
