--- a/projects/sahu/styles/_variables.scss
+++ b/projects/sahu/styles/_variables.scss
@@ -6,3 +6,13 @@
 .gray {
   color: #666 !important;
 }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
