--- a/projects/sahu/styles/_avatar.scss
+++ b/projects/sahu/styles/_avatar.scss
@@ -17,6 +17,11 @@
   width: 64px;
 }
 
+.sh-avatar-default {
+  height: 48px;
+  width: 48px;
+}
+
 .sh-avatar-small {
   height: 32px;
   width: 32px;
