--- a/projects/sahu/styles/_button.scss
+++ b/projects/sahu/styles/_button.scss
@@ -3,6 +3,7 @@
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 2px;
+  cursor: pointer;
   display: flex;
   gap: 8px;
   justify-content: center;
