cập nhật thành phần

--- a/projects/sahu/styles/_button.scss
+++ b/projects/sahu/styles/_button.scss
@@ -1,3 +1,5 @@
+@use './variables-global' as *;
+
 .btn {
   align-items: center;
   background-color: transparent;
@@ -8,6 +10,7 @@
   gap: 8px;
   justify-content: center;
   padding: 2px 16px;
+  transition: .3s;
 }
 
 .btn-blank {
@@ -15,9 +18,15 @@
 }
 
 .btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: $primary_color;
+  border-color: $primary_color;
   color: #fff;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  background-color: $primary_color_active;
+  border-color: $primary_color_active;
 }
 
 .btn-default {
