--- a/projects/sahu/src/lib/sh-form/sh-form.component.html
+++ b/projects/sahu/src/lib/sh-form/sh-form.component.html
@@ -1,3 +1,3 @@
-<form id="sh-form" class="sh-form" (submit)="handleSubmit($event)" #shForm>
+<form [attr.id]="shId || null" class="sh-form" (submit)="handleSubmit($event)" #shForm>
   <ng-content></ng-content>
 </form>
