--- a/projects/sahu/styles/_input.scss
+++ b/projects/sahu/styles/_input.scss
@@ -19,26 +19,11 @@ input:focus-visible {
 .sh-input-text,
 .sh-input-password {
   align-items: center;
-  background-color: #f5f5f5;
-  border: 1px solid #d9d9d9;
+  background-color: #f7f7f7;
+  border: 1px solid #dbdbdb;
   border-radius: 2px;
   display: flex;
-  overflow: hidden;
   transition: .3s;
-
-  &.sh-input-icon .icon {
-    align-items: center;
-    color: #666;
-    display: flex;
-    flex: 10px 0 0;
-    height: 100%;
-    justify-content: center;
-    padding: 5px 0 5px 10px;
-  }
-
-  &.sh-input-icon input~.icon {
-    padding: 5px 10px 5px 0;
-  }
 
   .input-loading {
     align-items: center;
@@ -77,6 +62,20 @@ input:focus-visible {
 .sh-input-text.input-disabled input,
 .sh-input-password.input-disabled input {
   cursor: not-allowed;
+}
+
+.sh-input-icon .icon {
+  align-items: center;
+  color: #777;
+  display: flex;
+  flex: 10px 0 0;
+  height: 100%;
+  justify-content: center;
+  padding: 5px 0 5px 10px;
+}
+
+.sh-input-icon input~.icon {
+  padding: 5px 10px 5px 0;
 }
 
 .input-sm {
