--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,2 +1,4 @@
-$primary_color: #1890ff;
-$primary_color_active: #0072dd;
+$primary_color: #057ded;
+$primary_color_active: #0061bb;
+
+$primary_color_text: #333;
