--- a/projects/sahu/styles/_variables.scss
+++ b/projects/sahu/styles/_variables.scss
@@ -1,3 +1,5 @@
+@use './variables-global' as *;
+
 * {
   box-sizing: border-box;
   font-family: 'Sh', sans-serif;
@@ -6,7 +8,7 @@
 
 html,
 body {
-  color: #333;
+  color: $primary_color_text;
   font-size: 14px;
   font-weight: 400;
 }
