--- a/projects/sahu/src/lib/sh-modal/sh-modal.component.html
+++ b/projects/sahu/src/lib/sh-modal/sh-modal.component.html
@@ -15,8 +15,8 @@
 
     <ng-container *ngIf="shFoot">
       <div class="md-foot" [ngClass]="shFootClass">
-        <sh-button (click)="handleCancel($event)" [shClass]="'btn-default'">Đóng</sh-button>
-        <sh-button (click)="handleOk($event)" [shClass]="'btn-primary'">Ok</sh-button>
+        <sh-button (click)="handleCancel($event)" [shClass]="'default'">Đóng</sh-button>
+        <sh-button (click)="handleOk($event)" [shClass]="'primary'">Ok</sh-button>
       </div>
     </ng-container>
 
