--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,4 +1,4 @@
-$primary_color: #057ded;
-$primary_color_active: #0061bb;
+$primary_color: #428BCA;
+$primary_color_active: #2370b3;
 
 $primary_color_text: #333;
