cập nhật thành phần

--- a/projects/sahu/styles/_variables-global.scss
+++ b/projects/sahu/styles/_variables-global.scss
@@ -1,4 +1,10 @@
 $primary_color: #428BCA;
-$primary_color_active: #2370b3;
+$primary_color_active: #1B6AAA;
+
+$info_color: #6FB3E0;
+$info_color_active: #4F99C6;
+
+$success_color: #87B87F;
+$success_color_active: #629B58;
 
 $primary_color_text: #333;
