--- a/projects/sahu/styles/_button.scss
+++ b/projects/sahu/styles/_button.scss
@@ -10,6 +10,7 @@
   gap: 8px;
   justify-content: center;
   padding: 2px 16px;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
   transition: .3s;
 }
 
@@ -27,6 +28,30 @@
 .btn-primary:focus {
   background-color: $primary_color_active;
   border-color: $primary_color_active;
+}
+
+.btn-info {
+  background-color: $info_color;
+  border-color: $info_color;
+  color: #fff;
+}
+
+.btn-info:hover,
+.btn-info:focus {
+  background-color: $info_color_active;
+  border-color: $info_color_active;
+}
+
+.btn-success {
+  background-color: $success_color;
+  border-color: $success_color;
+  color: #fff;
+}
+
+.btn-success:hover,
+.btn-success:focus {
+  background-color: $success_color_active;
+  border-color: $success_color_active;
 }
 
 .btn-default {
