--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -188,7 +188,7 @@
     padding: 10px 5px;
   }
 
-  .sh-select-dropdown.top {
+  .sh-select-dropdown.drop_top {
     bottom: calc(100% + 8px);
     box-shadow: 0 -11px 15px -7px rgba(0, 0, 0, .2), 0 -24px 38px 3px rgba(0, 0, 0, .14), 0 -9px 46px 8px rgba(0, 0, 0, .12);
     top: auto;
