--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -110,10 +110,12 @@
       input {
         cursor: pointer;
         height: 100%;
+        left: 0;
         margin: 0;
         opacity: 0;
         padding: 0;
         position: absolute;
+        top: 0;
         width: 100%;
         z-index: 9;
       }
