cập nhật thành phần

--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -182,7 +182,6 @@
   overflow-y: auto;
   position: absolute;
   top: calc(100% + 8px);
-  transform-origin: top;
   width: 100%;
   z-index: 1000;
 
@@ -271,11 +270,25 @@
   }
 }
 
+.sh-select-content.drop_bottom {
+  transform-origin: top;
+}
+
 .sh-select-content.drop_top {
   bottom: calc(100% + 8px);
   box-shadow: 0 -11px 15px -7px rgba(0, 0, 0, .2), 0 -24px 38px 3px rgba(0, 0, 0, .14), 0 -9px 46px 8px rgba(0, 0, 0, .12);
   top: auto;
   transform-origin: bottom;
+}
+
+.sh-select-content.display_center {
+  left: 50%;
+  max-height: min(600px, 80vh);
+  max-width: calc(100% - 32px);
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
 }
 
 .sh-select-content .text {
