--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -1,8 +1,8 @@
-<div class="sh-select {{shDisplay != 'bubble' ? 'visible_overlay' : ''}}" [class.open]="datePickerOpen" [class.select-disabled]="shDisabled">
-  <div class="sh-select-overlay" (click)="closeDropdown()"></div>
+<div class="sh-date-picker {{shDisplay != 'bubble' ? 'visible_overlay' : ''}}" [class.open]="datePickerOpen" [class.select-disabled]="shDisabled">
+  <div class="sh-overlay" (click)="closeDropdown()"></div>
 
   <div class="field-validation">
-    <div class="sh-select-selection" (click)="toggleDropdown()" #selectSelection>
+    <div class="sh-date-selection" (click)="toggleDropdown()" #dateSelection>
       <input
         type="text"
         class="input-hidden"
@@ -13,10 +13,11 @@
         [attr.data-vali]="shDataVali ? shDataVali : null" />
 
       <div class="results-zone">
+        <span class="sh-start-date"></span>
       </div>
       <i class="dropdown-icon"></i>
 
-      <button *ngIf="(inputValue || inputValue == 0) && shAllowClear && !shMultiple" type="button" class="sh-select-reset" (click)="reset($event)"></button>
+      <button *ngIf="(inputValue || inputValue == 0) && shAllowClear" type="button" class="sh-select-reset" (click)="reset($event)"></button>
     </div>
   </div>
 
