--- a/projects/sahu/styles/global.scss
+++ b/projects/sahu/styles/global.scss
@@ -10,3 +10,30 @@
 @use './slideshow';
 @use './message_box';
 @use './page_header';
+
+.sh-overlay {
+  background-color: transparent;
+  height: 100%;
+  left: 0;
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  transition: .3s;
+  visibility: hidden;
+  width: 100%;
+  z-index: 999;
+}
+
+.open .sh-overlay {
+  opacity: 1;
+  visibility: visible;
+}
+
+.visible_overlay .sh-overlay {
+  background-color: rgba(0, 0, 0, 0);
+  transition: .3s;
+}
+
+.visible_overlay.open .sh-overlay {
+  background-color: rgba(0, 0, 0, 0.6);
+}
