--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -257,7 +257,7 @@
   transform-origin: top;
 }
 
-.sh-select-content.drop_top {
+.sh-select-content.drop_up {
   bottom: calc(100% + 8px);
   box-shadow: 0 -11px 15px -7px rgba(0, 0, 0, .2), 0 -24px 38px 3px rgba(0, 0, 0, .14), 0 -9px 46px 8px rgba(0, 0, 0, .12);
   top: auto;
