--- a/projects/sahu/styles/_select.scss
+++ b/projects/sahu/styles/_select.scss
@@ -224,7 +224,7 @@
   }
 
   input:checked~.remark {
-    background: transparent url("/assets/images/icons/others/ico-check-1.svg") no-repeat center;
+    background: transparent url("../images/ico-check.svg") no-repeat center;
   }
 
   .content-group {
