--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -32,7 +32,7 @@
       </div>
       <i class="dropdown-icon"></i>
 
-      <button *ngIf="(inputValue || inputValue == 0) && shAllowClear" type="button" class="sh-select-reset" (click)="reset($event)"></button>
+      <button *ngIf="(inputValue || inputValue == 0) && shAllowClear" type="button" class="sh-reset" (click)="reset($event)"></button>
     </div>
   </div>
 
