--- a/projects/sahu/src/lib/sh-select/sh-select.component.html
+++ b/projects/sahu/src/lib/sh-select/sh-select.component.html
@@ -2,7 +2,7 @@
   <div class="sh-overlay" (click)="closeDropdown()"></div>
 
   <div class="field-validation">
-    <div class="sh-select-selection" (click)="toggleDropdown()" #selectSelection>
+    <div class="sh-select-selection {{shMultiple ? 'select-multiple' : ''}}" (click)="toggleDropdown()" #selectSelection>
       <input
         type="text"
         class="input-hidden"
