--- a/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
+++ b/projects/sahu/src/lib/sh-date-picker/sh-date-picker.component.html
@@ -1,42 +1,1 @@
-<div class="sh-date-picker {{shDisplay != 'bubble' ? 'visible_overlay' : ''}}" [class.open]="datePickerOpen" [class.select-disabled]="shDisabled">
-  <div class="sh-overlay" (click)="closeDropdown()"></div>
-
-  <div class="field-validation">
-    <div class="sh-date-selection" (click)="toggleDropdown()" #dateSelection>
-      <input
-        type="text"
-        class="input-hidden"
-        [attr.id]="shId || null"
-        [attr.name]="shName || null"
-        [(ngModel)]="inputValue"
-        [attr.value]="inputValue"
-        [attr.data-vali]="shDataVali ? shDataVali : null" />
-
-      <div class="results-zone">
-
-        <ng-container *ngIf="!shRange">
-          <span class="sh-date-item">{{inputValueLabel || shPlaceHolder}}</span>
-        </ng-container>
-
-        <ng-container *ngIf="shRange">
-          <ng-container *ngIf="startDate && endDate">
-            <span class="sh-date-item sh-start-date">{{startDate}}</span>
-            <svg fill="currentColor" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M311.03 131.515l-7.071 7.07c-4.686 4.686-4.686 12.284 0 16.971L387.887 239H12c-6.627 0-12 5.373-12 12v10c0 6.627 5.373 12 12 12h375.887l-83.928 83.444c-4.686 4.686-4.686 12.284 0 16.971l7.071 7.07c4.686 4.686 12.284 4.686 16.97 0l116.485-116c4.686-4.686 4.686-12.284 0-16.971L328 131.515c-4.686-4.687-12.284-4.687-16.97 0z" /></svg>
-            <span class="sh-date-item sh-end-date">{{endDate}}</span>
-          </ng-container>
-          <ng-container *ngIf="!startDate || !endDate">
-            <span class="sh-date-item">{{shPlaceHolder}}</span>
-          </ng-container>
-        </ng-container>
-
-      </div>
-      <i class="dropdown-icon"></i>
-
-      <button *ngIf="(inputValue || inputValue == 0) && shAllowClear" type="button" class="sh-reset" (click)="reset($event)"></button>
-    </div>
-  </div>
-
-  <div class="sh-select-content {{shDisplay == 'bubble' ? dropdownPosition : ('display_' + shDisplay)}}" *ngIf="datePickerOpen" [@shAnimation]="shDisplay">
-
-  </div>
-</div>
+<input (focus)="openDatePicker()" [value]="displayValue" readonly />
