--- a/projects/sahu/styles/_date_picker.scss
+++ b/projects/sahu/styles/_date_picker.scss
@@ -1,3 +1,8 @@
+.date-picker-display {
+  cursor: pointer;
+  width: 100%;
+}
+
 .date-picker-panel {
   background: white;
   border: 1px solid #ccc;
