--- a/projects/sahu/styles/_date_picker.scss
+++ b/projects/sahu/styles/_date_picker.scss
@@ -21,6 +21,19 @@
   padding: 5px;
 }
 
+.switch-date {
+  align-items: center;
+  display: flex;
+  gap: 5px;
+}
+
+.switch-date .btn {
+  color: #555;
+  font-size: 20px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
 .calendar-grid {
   display: grid;
   gap: 5px;
