--- a/projects/sahu/styles/_date_picker.scss
+++ b/projects/sahu/styles/_date_picker.scss
@@ -16,6 +16,8 @@
 }
 
 .calendar-header {
+  align-items: center;
+  border-bottom: 1px solid #cfcfcf;
   display: flex;
   justify-content: space-between;
   padding: 5px;
@@ -24,26 +26,35 @@
 .switch-date {
   align-items: center;
   display: flex;
-  gap: 5px;
 }
 
 .switch-date .btn {
-  color: #555;
+  color: #3281b5;
   font-size: 20px;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 .calendar-grid {
   display: grid;
-  gap: 5px;
+  font-size: 13px;
+  gap: 4px;
   grid-template-columns: repeat(7, 1fr);
+  padding: 5px 10px 10px;
+}
+
+.day-label {
+  color: #3281b5;
+  font-weight: 500;
+  margin-bottom: 3px;
+  padding: 6px 1px;
 }
 
 .day {
-  border-radius: 5px;
   cursor: pointer;
-  padding: 5px;
+  height: 28px;
+  padding: 1px;
+  width: 28px;
 }
 
 .day.selected {
