--- a/projects/sahu/styles/_date_picker.scss
+++ b/projects/sahu/styles/_date_picker.scss
@@ -12,7 +12,7 @@
 
 .calendar-box {
   text-align: center;
-  width: 250px;
+  width: 230px;
 }
 
 .calendar-header {
@@ -29,35 +29,45 @@
 }
 
 .switch-date .btn {
-  color: #3281b5;
+  color: #666;
   font-size: 20px;
-  padding-left: 3px;
-  padding-right: 3px;
+  padding-left: 1px;
+  padding-right: 1px;
 }
 
 .calendar-grid {
   display: grid;
   font-size: 13px;
-  gap: 4px;
+  gap: 5px 0;
   grid-template-columns: repeat(7, 1fr);
   padding: 5px 10px 10px;
 }
 
 .day-label {
-  color: #3281b5;
-  font-weight: 500;
+  color: #222;
   margin-bottom: 3px;
   padding: 6px 1px;
 }
 
 .day {
+  align-items: center;
+  color: #222;
   cursor: pointer;
-  height: 28px;
+  display: flex;
+  font-size: 12px;
+  height: 26px;
+  justify-content: center;
   padding: 1px;
-  width: 28px;
+  width: 30px;
 }
 
-.day.selected {
-  background: #007bff;
-  color: white;
+.day-container:hover .day,
+.selected .day {
+  background: #c8e3ff;
+}
+
+.start_date.selected .day,
+.end_date.selected .day {
+  background: #238dff;
+  color: #fff;
 }
